[tool.poetry]
name = "cohentools"
version = "0.1.0"
description = ""
authors = ["Jacob Cohen <jacobcohen76@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
poethepoet = "^0.13.1"
pytest-cov = "^3.0.0"

[tool.poe.tasks.test]
help = "runs unit test with coverage"
cmd  = "pytest --cov=cohentools"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
